@@ -147,14 +147,6 @@ also does its job well on desktop systems.
 They normally are shell scripts, and an operating system distribution with
 software package management should adapt these scripts if they need support
 for their package management.
-The
-<a href="http://packages.debian.org/unstable/admin/runit-run.html">
-runit-run</a>
-Debian package is an attempt to integrate <i>runit</i> into
-<a href="http://www.debian.org/">Debian GNU/Linux</a> as an alternative to
-the default
-<a href="http://packages.debian.org/unstable/base/sysvinit.html">
-sysvinit</a>.
 <p>
 Stage 2 is packaging friendly:
 all a software package that provides a service needs to do is to include
